# qt-viewer

./: .gitignore  CMakeLists.txt  README.md
include/: ImageLoader.h  ImageProcessor.h  ImageViewer.h  MainWindow.h
scripts/: create_project_structure.sh
src/: ImageLoader.cpp  ImageProcessor.cpp  ImageViewer.cpp  MainWindow.cpp  main.cpp
